--- a/CPUWatcher/CPUWatcher/CPUWatcher.csproj
+++ b/CPUWatcher/CPUWatcher/CPUWatcher.csproj
@@ -43,11 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CPUWatcher.cs" />
     <Compile Include="ProcessWatcher.cs" />
+    <Compile Include="ProcessUnit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TimerEventClass.cs" />
+    <Compile Include="EventClass.cs" />
     <Compile Include="Watcher.cs" />
   </ItemGroup>
   <ItemGroup>
