Refactor Domain. Add controllers for application

--- a/CPUWatcher/Domain/Domain.csproj
+++ b/CPUWatcher/Domain/Domain.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleInput.cs" />
+    <Compile Include="GUI\IGui.cs" />
+    <Compile Include="GUI\Terminal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
