--- a/CPUWatcher/CPUConsumer/CPUConsumer.csproj
+++ b/CPUWatcher/CPUConsumer/CPUConsumer.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consumer.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
