--- a/CPUWatcher/CPUWatcher/CPUWatcher.csproj
+++ b/CPUWatcher/CPUWatcher/CPUWatcher.csproj
@@ -47,7 +47,7 @@
     <Compile Include="ProcessUnit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="EventClass.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="Watcher.cs" />
   </ItemGroup>
   <ItemGroup>
